<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fvarrui.sysadmin.challenger</groupId>
	<artifactId>Model</artifactId>
	<version>0.0.1</version>
	<name>Challenger</name>
	<description>Data model for the challenger for systems administrators</description>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>cp1252</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.zenjava</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>8.6.0</version>
				<configuration>
					<appName>MonitoringApp</appName>
					<mainClass>fvarrui.sysadmin.Main</mainClass>
					<vendor>Fran Vargas</vendor>
				</configuration>
				<executions>
					<execution>
						<id>create-jfxjar</id>
						<phase>package</phase>
						<goals>
							<goal>build-jar</goal>
						</goals>
					</execution>
					<!-- <execution> <id>create-native</id> <phase>package</phase> <goals> 
						<goal>build-native</goal> </goals> </execution> -->
				</executions>
			</plugin>


		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
	</dependencies>

</project>